--- a/package.json
+++ b/package.json
@@ -20,6 +20,13 @@
         "babel-loader": "^7.1.5",
         "babel-preset-env": "^1.7.0",
         "babel-preset-es2015": "^6.24.1",
+        "css-loader": "^3.2.1",
+        "cssnano": "^4.1.10",
+        "mini-css-extract-plugin": "^0.8.0",
+        "postcss-loader": "^3.0.0",
+        "sass": "^1.23.7",
+        "sass-loader": "^8.0.0",
+        "style-loader": "^1.0.1",
         "ts-loader": "^6.2.0",
         "typescript": "^3.6.4",
         "webpack": "^4.41.2",
