--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "author": "IDea Factory",
     "license": "ISC",
     "devDependencies": {
+        "@types/jquery": "^3.3.31",
         "babel-cli": "^6.26",
         "babel-core": "^6.26.3",
         "babel-loader": "^7.1.5",
@@ -34,6 +35,7 @@
         "webpack-dev-server": "^3.8.2"
     },
     "dependencies": {
-        "bootstrap": "^4.4.1"
+        "bootstrap": "^4.4.1",
+        "jquery": "^3.4.1"
     }
 }
